--- a/src/renderer/src/assets/main.css
+++ b/src/renderer/src/assets/main.css
@@ -1,4 +1,14 @@
-@import './base.css';
+body {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+p {
+  margin: 0;
+}
+
+/* @import './base.css';
 
 body {
   display: flex;
@@ -168,4 +178,4 @@ code {
   .actions {
     display: none;
   }
-}
+} */
